unified_logs.txt

=== Error Context Entry 1 ===
Error ID: ERR_001
Source File: test.c
Error Line: 4

Raw Compiler Error:
test.c:4:15: error: expected ';' at end of declaration
    4 |     int x = 10
      |               ^
      |               ;
1 error generated.

Cleaned Error Message:
expected ';' at end of declaration

--- TEXT CONTEXT ---
2: 
3: int main() {
4:     int x = 10
5:     return 0;
6: }

Token Near Error: End of line

--- CLASSIFICATION ---
Error Category: Missing token
Compiler Phase: Parsing
Violated Rule: Statements in C must end with a semicolon.

--- AST CONTEXT ---
AST Node Type: DeclStmt
Parent Node Type: ParmVarDecl
========================================

=== Error Context Entry 2 ===
Error ID: ERR_002
Source File: test.c
Error Line: 4

Raw Compiler Error:
test.c:4:15: error: expected ';' at end of declaration
    4 |     int x = 10
      |               ^
      |               ;
1 error generated.

Cleaned Error Message:
expected ';' at end of declaration

--- TEXT CONTEXT ---
2: 
3: int main() {
4:     int x = 10
5:     return 0;
6: }

Token Near Error: End of line

--- CLASSIFICATION ---
Error Category: Missing token
Compiler Phase: Parsing
Violated Rule: Statements in C must end with a semicolon.

--- AST CONTEXT ---
AST Node Type: DeclStmt
Parent Node Type: ParmVarDecl
========================================
=== Error Context Entry 3 ===
Error ID: ERR_003
Source File: test_suite/beginner_programs/test1_missing_semicolon.c
Error Line: 8

Raw Compiler Error:
test_suite/beginner_programs/test1_missing_semicolon.c:8:15: error: expected ';' at end of declaration
    8 |     int x = 10
      |               ^
      |               ;
1 error generated.

Cleaned Error Message:
expected ';' at end of declaration

--- TEXT CONTEXT ---
6: 
7: int main() {
8:     int x = 10
9:     printf("x = %d\n", x);
10:     return 0;

Token Near Error: End of line

--- CLASSIFICATION ---
Error Category: Missing token
Compiler Phase: Parsing
Violated Rule: Statements in C must end with a semicolon.

--- AST CONTEXT ---
AST Node Type: DeclStmt
Parent Node Type: ParmVarDecl
========================================

=== Error Context Entry 4 ===
Error ID: ERR_004
Source File: test_suite/beginner_programs/test1_missing_semicolon.c
Error Line: 8

Raw Compiler Error:
test_suite/beginner_programs/test1_missing_semicolon.c:8:15: error: expected ';' at end of declaration
    8 |     int x = 10
      |               ^
      |               ;
1 error generated.

Cleaned Error Message:
expected ';' at end of declaration

--- TEXT CONTEXT ---
6: 
7: int main() {
8:     int x = 10
9:     printf("x = %d\n", x);
10:     return 0;

Token Near Error: End of line

--- CLASSIFICATION ---
Error Category: Missing token
Compiler Phase: Parsing
Violated Rule: Statements in C must end with a semicolon.

--- AST CONTEXT ---
AST Node Type: DeclStmt
Parent Node Type: ParmVarDecl
========================================

=== Error Context Entry 5 ===
Error ID: ERR_005
Source File: test_suite/beginner_programs/test1_missing_semicolon.c
Error Line: 8

Raw Compiler Error:
test_suite/beginner_programs/test1_missing_semicolon.c:8:15: error: expected ';' at end of declaration
    8 |     int x = 10
      |               ^
      |               ;
1 error generated.

Cleaned Error Message:
expected ';' at end of declaration

--- TEXT CONTEXT ---
6: 
7: int main() {
8:     int x = 10
9:     printf("x = %d\n", x);
10:     return 0;

Token Near Error: End of line

--- CLASSIFICATION ---
Error Category: Missing token
Compiler Phase: Parsing
Violated Rule: Statements in C must end with a semicolon.

--- AST CONTEXT ---
AST Node Type: DeclStmt
Parent Node Type: ParmVarDecl
========================================
